--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
 		"d3-array": "^3.2.4",
 		"d3-fetch": "^3.0.1",
 		"d3-force": "^3.0.0",
+		"d3-force-limit": "^1.2.2",
 		"d3-hierarchy": "^3.1.2",
 		"d3-scale": "^4.0.2",
 		"d3-shape": "^3.2.0",
